# advent_2022_1

./: Cargo.toml  README.md
src/: main.rs
