[package]
name = "advent_2022_1"
version = "0.1.0"
edition = "2021"
authors = ["MANJULAP1012"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
exitfailure = "0.5.1"
reqwest = { version = "0.11.0", features = ["json"] }
serde = "1.0.61"
serde_json = "~1.0"
tokio = { version = "1.0.2", features = ["full"] }